docker-compose.yml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,3 +7,16 @@ services:
       - .:/code2
     ports:
       - 8000:8000
+
+    depends_on:
+      - db
+    env_file:
+      - ./.venv.dev
+  db:
+    image: postgres:13
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    environment:
+      - "POSTGRES_HOST_AUTH_METHOD=trust"
+volumes:
+  postgres_data:
