--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,18 +2,24 @@ version: "3.9"
 services:
   web:
     build: .
-    command: python /code2/manage.py runserver 0.0.0.0:8000
+    command: python /code/manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/code2
     ports:
       - 8000:8000
     depends_on:
       - db
-  db:
-    image: postgres:13
-    volumes:
-      - postgres_data:/var/lib/postgresql/data/
+
     environment:
-      - "POSTGRES_HOST_AUTH_METHOD=trust"
+      - POSTGRES_NAME=postgres
+      - POSTGRES_USER=postgres
+      - POSTGRES_PASSWORD=postgres  
+  db:
+   image: postgres:13
+   volumes:
+     - postgres_data:/var/lib/postgresql/data/
+   environment:
+     - "POSTGRES_HOST_AUTH_METHOD=trust"
+     - POSTGRES_PASSWORD=postgres
 volumes:
   postgres_data:
