--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,24 +2,26 @@ version: "3.9"
 services:
   web:
     build: .
-    command: python /code/manage.py runserver 0.0.0.0:8000
+    command: python /code2/manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/code2
     ports:
       - 8000:8000
     depends_on:
       - db
+    # env_file:
+    #  - .venv
 
-    environment:
-      - POSTGRES_NAME=postgres
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres  
+    # environment:
+    #   - POSTGRES_NAME=postgres
+    #   - POSTGRES_USER=postgres
+    #   - POSTGRES_PASSWORD=postgres  
   db:
    image: postgres:13
    volumes:
      - postgres_data:/var/lib/postgresql/data/
    environment:
-     - "POSTGRES_HOST_AUTH_METHOD=trust"
+    #  - "POSTGRES_HOST_AUTH_METHOD=trust"
      - POSTGRES_PASSWORD=postgres
 volumes:
   postgres_data:
